--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "eslint": "^6.5.1",
-    "koa": "^2.8.2"
+    "koa": "^2.8.2",
+    "koa-router": "^7.4.0"
   }
 }
