--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^6.5.1",
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "minimist": "^1.2.0"
   }
 }
