--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "node-fetch": "^2.6.0"
   }
 }
